# WifiPy

./: AGENTS.md  LICENSE  README.md  main.py  pyproject.toml
core/: backend.py  crypto.py  db.py
desing/: colors.py  layouts.py
ui/: app.py  screens.py  styles.css
