[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "ui", "desing"]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"

[project]
name = "wifipy"
version = "0.1.0"
description = "Gestor de redes WiFi TUI"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "textual>=8.2.8",
    "cryptography>=44.0",
    "platformdirs>=4.3",
]

[project.scripts]
wifipy = "main:main"
